--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "rxjs": "^7.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
